fix: dropdown not showing

--- a/styles/output.css
+++ b/styles/output.css
@@ -1374,6 +1374,14 @@ input[type='search']::-webkit-search-decoration,
   gap: 8px;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .self-center {
   align-self: center;
 }
@@ -1386,8 +1394,16 @@ input[type='search']::-webkit-search-decoration,
   overflow: hidden;
 }
 
+.overflow-clip {
+  overflow: clip;
+}
+
 .overflow-scroll {
   overflow: scroll;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .truncate {
